fix(crafting): isolate cancellation without eager interrupt